// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the LmsTable renders correctly 1`] = `
<Fragment>
  <div
    className="lms-table"
  >
    <Table>
      <TableHeader
        headers={
          Array [
            "Course Id",
            "Output Name",
            "Due Date",
            "Submission Date",
            "Review Date",
            "Resubmitted",
            "Score",
          ]
        }
      />
    </Table>
  </div>
  <Loader
    size=""
  />
</Fragment>
`;

exports[`tests the LmsTable renders correctly 2`] = `
<Fragment>
  <div
    className="lms-table"
  >
    <Table>
      <TableHeader
        headers={
          Array [
            "Course Id",
            "Output Name",
            "Due Date",
            "Submission Date",
            "Review Date",
            "Resubmitted",
            "Score",
          ]
        }
      />
    </Table>
  </div>
</Fragment>
`;

exports[`tests the LmsTable renders correctly 3`] = `
<Fragment>
  <div
    className="lms-table"
  >
    <Table>
      <TableHeader
        headers={
          Array [
            "Course Id",
            "Output Name",
            "Due Date",
            "Submission Date",
            "Review Date",
            "Resubmitted",
            "Score",
          ]
        }
      />
      <LmsRow
        key="weak-key-2"
        lmsSubmission={Object {}}
      />
    </Table>
  </div>
  <Loader
    size=""
  />
</Fragment>
`;

exports[`tests the LmsTable renders correctly 4`] = `
<ErrorMessage
  customStyle={Object {}}
  message="There's currently no LMS data for this fellow"
/>
`;
